--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
 		</header>
 
   <main class="flex-row justify-space-between">
- 
+ 		<div class="col-12 col-md-4">
+ 			<!-- search section -->
+ 			<div class="card">
+ 				<h2 class="card-header text-uppercase">Search By City</h2>
+ 				<form id="city-form" class="card-body">
+ 					<label class="form-label"></label>
+ 					<input name="cityname" id="cityname" type="text" autofocus="true" class="form-input">
+ 					<button type="submit" id="search-btn" class="btn">Get City</button>
+ 			</div>
+ 		</div>
   </main>
 
     <script src="./assets/js/script.js"></script>
