--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
  					<button type="submit" id="search-btn" class="btn">Get City</button>
  			</div>
  		</div>
+ 		<div class="col-12 col-md-8">
+ 			<h2 class="subtitle">The Weather for: <span id="city-search-term"></span></h2>
+ 		</div>
   </main>
 
     <script src="./assets/js/script.js"></script>
