--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
  		</div>
  		<div class="col-12 col-md-8">
  			<h2 class="subtitle">The Weather for: <span id="city-search-term"></span></h2>
+ 			<div id="weather-container" class="list-group"></div>
  		</div>
   </main>
 
