--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 	<body class="flex-column min-100-vh">
 		<header class="hero">
 			<h1 class="app-title">Weather Dashboard</h1>
+	 		<span class="subtitle" id="city-search-term"></span>
 		</header>
-
+			
   <main class="flex-row justify-space-between">
- 		<div class="col-12 col-md-4">
+ 		<div class="col-3 col-md-3">
  			<!-- search section -->
  			<div class="card">
  				<h2 class="card-header text-uppercase">Search By City</h2>
@@ -21,11 +22,44 @@
  					<input name="cityname" id="cityname" type="text" autofocus="true" class="form-input">
  					<button type="submit" id="search-btn" class="btn">Get City</button>
  			</div>
+ 		</div> 		
+ 		<div class="col-2 col-md-2">
+ 			<div id="day1-weather-container" class="forecast-group">
+ 				<h3 id="day1-weather"></h3>
+ 				<span id="weather-emoji"></span>
+ 				<p id="weather1-data-temp"></p>
+ 				<p id="weather1-data-wind"></p>
+ 				<p id="weather1-data-humidity"></p>
+ 			</div>
  		</div>
- 		<div class="col-12 col-md-8">
- 			<h2 class="subtitle">The Weather for: <span id="city-search-term"></span></h2>
- 			<div id="weather-container" class="list-group"></div>
+ 		<div class="col-2 col-md-2">
+ 			<div id="day2-weather-container" class="forecast-group">
+ 				<h3 id="day2-weather"></h3>
+ 				<span id="weather-emoji"></span>
+ 				<p id="weather2-data-temp"></p>
+ 				<p id="weather2-data-wind"></p>
+ 				<p id="weather2-data-humidity"></p>
+ 			</div>
  		</div>
+ 		<div class="col-2 col-md-2">
+ 			<div id="day3-weather-container" class="forecast-group">
+ 				<h3 id="day3-weather"></h3>
+ 				<span id="weather-emoji"></span>
+ 				<p id="weather3-data-temp"></p>
+ 				<p id="weather3-data-wind"></p>
+ 				<p id="weather3-data-humidity"></p>
+ 			</div>
+ 		</div>
+ 		<div class="col-2 col-md-2">
+ 			<div id="day4-weather-container" class="forecast-group">
+ 				<h3 id="day4-weather"></h3>
+ 				<span id="weather-emoji"></span>
+ 				<p id="weather4-data-temp"></p>
+ 				<p id="weather4-data-wind"></p>
+ 				<p id="weather4-data-humidity"></p>
+ 			</div>
+ 		</div>
+ 		
   </main>
 
     <script src="./assets/js/script.js"></script>
